<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.littleredgroup.jokennerd.MainActivity">

    <include
        android:id="@+id/main_toolbar"
        style="@style/ToolBarDimensions"
        layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/main_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:text="@string/lbl_single_player" />

        <Button
            android:id="@+id/main_btn_single_player_vs_com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_player_vs_com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:text="@string/lbl_multi_player" />

        <Button
            android:id="@+id/main_btn_multi_player_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_chromecast" />
    </LinearLayout>
</RelativeLayout>