<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/game_toolbar"
        style="@style/ToolBarDimensions"
        layout="@layout/toolbar_layout" />

    <TextView
        android:id="@+id/game_tv_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/msg_need_chromecast_connection"
        android:textColor="@color/accent"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:textStyle="bold"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/game_rl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_toolbar"
        android:gravity="center"
        android:padding="@dimen/activity_padding">

        <ImageView
            android:id="@+id/game_iv_rock"
            android:layout_width="@dimen/game_image_size"
            android:layout_height="@dimen/game_image_size"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/game_image_margin"
            android:contentDescription="@string/cd_image_rock"
            android:src="@drawable/rock" />

        <ImageView
            android:id="@+id/game_iv_paper"
            android:layout_width="@dimen/game_image_size"
            android:layout_height="@dimen/game_image_size"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/game_iv_rock"
            android:layout_margin="@dimen/game_image_margin"
            android:contentDescription="@string/cd_image_paper"
            android:src="@drawable/paper" />

        <ImageView
            android:id="@+id/game_iv_scissor"
            android:layout_width="@dimen/game_image_size"
            android:layout_height="@dimen/game_image_size"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/game_iv_paper"
            android:layout_margin="@dimen/game_image_margin"
            android:contentDescription="@string/cd_image_scissor"
            android:src="@drawable/scissor" />

        <ImageView
            android:id="@+id/game_iv_lizard"
            android:layout_width="@dimen/game_image_size"
            android:layout_height="@dimen/game_image_size"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/game_iv_spock"
            android:layout_margin="@dimen/game_image_margin"
            android:layout_marginRight="60dp"
            android:contentDescription="@string/cd_image_lizard"
            android:src="@drawable/lizard" />

        <ImageView
            android:id="@+id/game_iv_spock"
            android:layout_width="@dimen/game_image_size"
            android:layout_height="@dimen/game_image_size"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/game_iv_rock"
            android:layout_margin="@dimen/game_image_margin"
            android:contentDescription="@string/cd_image_spock"
            android:src="@drawable/spock" />


    </RelativeLayout>

    <TextView
        android:id="@+id/game_tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="6dp"
        android:textSize="@dimen/abc_text_size_large_material"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>